# Financial_analyzer

./: .gitignore  README.md  Task_1.ipynb  Task_3.ipynb  check
financial_analyzer/: config.yaml.example  financial_data.db  nvda_analysis.json  pyproject.toml  reliance_analysis.json  swiggy_analysis.json
financial_analyzer/src/: __init__.py  config.py  data_fetcher.py  database.py  main.py  models.py  processor.py  signals.py
financial_analyzer/tests/: conftest.py  test_processor.py  test_signals.py
lab1/: analysis_report.docx  create_doc.py  house_summary_with_code.docx  main.ipynb
